--- a/sandbox/views/reporte.ejs
+++ b/sandbox/views/reporte.ejs
@@ -4,6 +4,13 @@
 	<meta charset="UTF-8">
 </head>
 <body>
+
+<form action="" method="post">
+	<input  id ="fechaInicio" type="date">
+	<input id ="fechaFin" type="date">
+	<input id ="enviar" type="submit">
+</form>
+
 <script src="https://code.jquery.com/jquery-3.1.1.min.js">
 </script>
 <script src="https://code.highcharts.com/highcharts.js">
