--- a/sandbox/views/perfil.ejs
+++ b/sandbox/views/perfil.ejs
@@ -6,8 +6,8 @@
 <body>
 	<div>
 		<p>Nombre<span id="name"></span></p>
-		<p>puntaje obtenido<span id="name"></span></p>
-		<p>ejercicos completados<span id="name"></span></p>
+		<p>puntaje obtenido<span id="puntaje"></span></p>
+		<p>ejercicos completados<span id="ejercicios"></span></p>
 		<ul id="insignias"></ul>
 
 	</div>
