utilizando la libreria chart

--- a/sandbox/views/reporte.ejs
+++ b/sandbox/views/reporte.ejs
@@ -5,11 +5,11 @@
 </head>
 <body>
 
-<form action="" method="post">
+<div action="" method="post">
 	<input  id ="fechaInicio" type="date">
 	<input id ="fechaFin" type="date">
-	<input id ="enviar" type="submit">
-</form>
+	<button id ="enviar">Enviar</button>
+</div>
 
 <script src="https://code.jquery.com/jquery-3.1.1.min.js">
 </script>
