Modelo de Ejericicios

--- a/sandbox/views/index.ejs
+++ b/sandbox/views/index.ejs
@@ -10,7 +10,7 @@
 
 		<form action="/">
 			<div class="imgcontainer">
-				<img src="/img/img_avatar2.png" alt="Avatar" class="avatar">
+				<img src="public/img/img_avatar2.png" alt="Avatar" class="avatar">
 			</div>
 
 			<div class="container">
