--- a/sandbox/views/login.ejs
+++ b/sandbox/views/login.ejs
@@ -25,12 +25,13 @@
 			</div>
 
 			<div class="container" style="background-color:#f1f1f1">
-				<button type="submit">Login</button>
+				<button type="btn" id="btnSign">Login</button>
 				<!-- <button type="button" class="cancelbtn">Cancel</button> -->
 				<!-- <span class="psw">Forgot <a href="#">password?</a></span> -->
 			</div>
 		</form>
 
+		<script type="text/javascript" src="javaScript/login.js"></script>
 	</body>
 </html>
 
