--- a/sandbox/views/reporte.ejs
+++ b/sandbox/views/reporte.ejs
@@ -10,6 +10,7 @@
 				
 		<link rel="stylesheet" href="/stylesheets/index_style00.css">
 		<link rel="stylesheet" href="/stylesheets/index_style01.css">
+		<link rel="stylesheet" href="/stylesheets/style_reporte.css">
 
 	</head>
 
@@ -56,9 +57,9 @@
 				
 			<section>
 				<div action="" method="post">
-					<input  id ="fechaInicio" type="date">
-					<input id ="fechaFin" type="date">
-					<button id ="enviar">Enviar</button>
+					<input  id ="fechaInicio" type="date"/>
+					<input id ="fechaFin" type="date"/>
+					<button id ="enviar">Buscar reporte</button>
 				</div>
 			</section>
 
