vistas de sandbox_Prof

--- a/sandbox/views/reporte.ejs
+++ b/sandbox/views/reporte.ejs
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="/stylesheets/index_style00.css">
 		<link rel="stylesheet" href="/stylesheets/index_style01.css">
 		<link rel="stylesheet" href="/stylesheets/style_reporte.css">
+		<!--<link rel="stylesheet" href="/stylesheets/style.css">-->
 
 	</head>
 
