--- a/sandbox/views/index.ejs
+++ b/sandbox/views/index.ejs
@@ -58,8 +58,10 @@
 						        	Nuevo
 						        </button>
 						        <br><br>
+
+						        <div id="usuariosTabla"></div>
 								<!-- <table class="table table-bordered" id="manageMemberTable"> -->
-								<table id="usuariosTabla" class="display" cellspacing="0" width="100%">
+								<!-- <table id="usuariosTabla" class="display" cellspacing="0" width="100%">
 									<thead>
 										<tr>
 											<th width="10%">Identificacion</th>
@@ -70,7 +72,7 @@
 											<th>Email</th>
 										</tr>
 									</thead>
-								</table>							    
+								</table>	 -->						    
 							<!-- </div> -->
 					    </div>
 
