--- a/sandbox/views/login.ejs
+++ b/sandbox/views/login.ejs
@@ -7,8 +7,8 @@
 	<body>
 		<!-- <h1><%= title %></h1>
 		<p>Welcome to <%= title %></p> -->
-
-		<form action="/">
+		
+		<form action="/" method="POST">
 			<div class="imgcontainer">
 				<img src="img/img_avatar2.png" alt="Avatar" class="avatar">
 			</div>
@@ -25,11 +25,12 @@
 			</div>
 
 			<div class="container" style="background-color:#f1f1f1">
-				<button type="btn" id="btnSign">Login</button>
+				<button type="btn" id="btnSign" class="btn">Login</button>
 				<!-- <button type="button" class="cancelbtn">Cancel</button> -->
 				<!-- <span class="psw">Forgot <a href="#">password?</a></span> -->
 			</div>
 		</form>
+		
 
 		<script type="text/javascript" src="javaScript/login.js"></script>
 	</body>
