--- a/sandbox/public/stylesheets/style.css
+++ b/sandbox/public/stylesheets/style.css
@@ -1,17 +1,32 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+
+  background-color: #fcfcfc;/*#808080  #fcf9f9*/
 }
 
 a {
   color: #00B7FF;
 }
 
+#btnSign{
+    font-size: 20px;
+}
+#btnSign:hover{
+  background: green;
+  background-image: -webkit-linear-gradient(top, green, #37df3e);
+  background-image: -moz-linear-gradient(top, green, #37df3e);
+  background-image: -ms-linear-gradient(top, green, #37df3e);
+  background-image: -o-linear-gradient(top, green, #37df3e);
+  background-image: linear-gradient(to bottom, green, #37df3e);
+  text-decoration: none;
 
+
+}
 
 /* Bordered form */
-#lgn {
-    border: 3px solid #f1f1f1;
+form {
+    border: 5px solid white;
     width: 50%;
     margin-left: auto;
     margin-right: auto;
@@ -29,7 +44,7 @@ input[type=text], input[type=password] {
 
 /* Set a style for all buttons */
 button {
-    background-color: #4CAF50;
+    background-color: #4CAF50;/*#0899fa  #4CAF50*/
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
