--- a/sandbox/views/sandbox_prof.ejs
+++ b/sandbox/views/sandbox_prof.ejs
@@ -36,7 +36,13 @@
 					<div class="collapse navbar-collapse" id="navbar-1">
 							<ul class="nav navbar-nav navbar-right">
 								<li  class="active"><a href="#">Administracion</a></li>
-								<li> <a href="#">Reportes</a> </li>	
+								<li class="dropdown active"> 
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Reportes<span class="caret"></span></a>
+									<ul class="dropdown-menu">
+										<li><a href="#">Reporte por Fecha</a></li>
+										<li><a href="#">Reporte por Ejercicios</a></li>
+									</ul>
+								</li>
 							</ul>
 						</div>
 					</div>
