--- a/sandbox/public/stylesheets/index_style01.css
+++ b/sandbox/public/stylesheets/index_style01.css
@@ -26,6 +26,13 @@
 	padding: 40px 50px;
 }
 
+/*CSS para el combo box de Reporte*/
+.dropdown-menu li:hover {
+
+background-color:  #f1f1f1;
+}
+
+
 /*
 #new_ejerc button {
 	margin-left: 1.5%;
