--- a/sandbox/views/login.ejs
+++ b/sandbox/views/login.ejs
@@ -8,7 +8,7 @@
 		<!-- <h1><%= title %></h1>
 		<p>Welcome to <%= title %></p> -->
 
-		<form action="/" method="POST">
+		<form action="/" method="POST" class="global">
 			<div class="imgcontainer">
 				<img src="img/img_avatar2.png" alt="Avatar" class="avatar">
 			</div>
@@ -25,7 +25,7 @@
 			</div>
 
 			<div class="container" style="background-color:#f1f1f1">
-				<button type="submit" value="Submit">Login</button>
+				<button class="container1" type="submit" value="Submit">Login</button>
 				<!-- <button type="button" class="cancelbtn">Cancel</button> -->
 				<!-- <span class="psw">Forgot <a href="#">password?</a></span> -->
 			</div>
