--- a/sandbox/views/sandbox_est.ejs
+++ b/sandbox/views/sandbox_est.ejs
@@ -35,8 +35,8 @@
 								<li class="dropdown active"> 
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Reportes<span class="caret"></span></a>
 									<ul class="dropdown-menu">
-										<li><a href="#">Reporte por Fecha</a></li>
-										<li><a href="#">Reporte por Ejercicios</a></li>
+										<li><a href="reporte/fecha">Reporte por Fecha</a></li>
+										<li><a href="reporte/curso">Reporte por Ejercicios</a></li>
 									</ul>
 								</li>
 							</ul>
