--- a/sandbox/views/reporte.ejs
+++ b/sandbox/views/reporte.ejs
@@ -40,8 +40,8 @@
 								<li class="dropdown active"> 
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Reportes<span class="caret"></span></a>
 									<ul class="dropdown-menu">
-										<li><a href="reporte/fecha">Reporte por Fecha</a></li>
-										<li><a href="reporte/curso">Reporte por Ejercicios</a></li>
+										<li><a href="fecha">Reporte por Fecha</a></li>
+										<li><a href="curso">Reporte por Ejercicios</a></li>
 									</ul>
 								</li>
 							</ul>
