--- a/sandbox/views/reporte.ejs
+++ b/sandbox/views/reporte.ejs
@@ -35,7 +35,7 @@
 
 						<div class="collapse navbar-collapse" id="navbar-1">
 							<ul class="nav navbar-nav navbar-right">
-								<li  class="active"><a href="#">Administracion</a></li>
+								<li  class="active"><a href="/index">Administracion</a></li>
 								<!--Copiando para las demas vistas-->
 								<li class="dropdown active"> 
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Reportes<span class="caret"></span></a>
