--- a/sandbox/views/sandbox_est.ejs
+++ b/sandbox/views/sandbox_est.ejs
@@ -31,7 +31,7 @@
 						</div>
 					<div class="collapse navbar-collapse" id="navbar-1">
 							<ul class="nav navbar-nav navbar-right">
-								<li  class="active"><a href="#">Administracion</a></li>
+								<li  class="active"><a href="/index">Administracion</a></li>
 								<li class="dropdown active"> 
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Reportes<span class="caret"></span></a>
 									<ul class="dropdown-menu">
