links de administrador

--- a/sandbox/views/reporte.ejs
+++ b/sandbox/views/reporte.ejs
@@ -35,13 +35,13 @@
 
 						<div class="collapse navbar-collapse" id="navbar-1">
 							<ul class="nav navbar-nav navbar-right">
-								<li  class="active"><a href="#">Administracion</a></li>
+								<li><a href="/index">Administracion</a></li>
 								<!--Copiando para las demas vistas-->
 								<li class="dropdown active"> 
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Reportes<span class="caret"></span></a>
 									<ul class="dropdown-menu">
-										<li><a href="#">Reporte por Fecha</a></li>
-										<li><a href="#">Reporte por Ejercicios</a></li>
+										<li class="active"><a href="#">Reporte por Fecha</a></li>
+										<li><a href="curso">Reporte por Ejercicios</a></li>
 									</ul>
 								</li>
 							</ul>
