--- a/sandbox/views/login.ejs
+++ b/sandbox/views/login.ejs
@@ -15,10 +15,10 @@
 
 			<div class="container">
 				<label><b>Username</b></label>
-				<input type="text" placeholder="Enter Username" name="username" required>
+				<input type="text" placeholder="Ingrese correo" name="username" required>
 
 				<label><b>Password</b></label>
-				<input type="password" placeholder="Enter Password" name="password" required>
+				<input type="password" placeholder="Ingrese contrasena" name="password" required>
 
 				<!-- <button type="submit">Login</button> -->
 				<!-- <input type="checkbox" checked="checked"> Remember me -->
