--- a/sandbox/views/sandbox_estd2.ejs
+++ b/sandbox/views/sandbox_estd2.ejs
@@ -1,4 +1,5 @@
- <!DOCTYPE html>
+
+<!DOCTYPE html>
 
 <html lang="es">
 
@@ -7,9 +8,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title><%= title %></title>
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<!--<link rel="stylesheet" href="css/style.css">-->
 		<link rel="stylesheet" href="/stylesheets/index_style00.css">
-		<link rel="stylesheet" href="/stylesheets/index_style01.css">
+		<link rel="stylesheet" href="/stylesheets/index_style
 	</head>
 
 	<body>
@@ -24,19 +24,28 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a class="navbar-brand" href="index.html">
-							<img src="/img/logo.png" alt="Fundamentos de Programación">
-							</a>
+							<a class="navbar-brand" href="index.html"><img src="/img/logo.png" alt="Fundamentos de Programación"></a>
 						</div>
-					<div class="collapse navbar-collapse" id="navbar-1">
+						<div class="collapse navbar-collapse" id="navbar-1">
 							<ul class="nav navbar-nav navbar-right">
-								<li  class="active"><a href="/index">Administracion</a></li>
+								<li> <a href="index.html">Inicio</a> </li>
 								<li class="dropdown active"> 
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Reportes<span class="caret"></span></a>
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Curso<span class="caret"></span></a>
 									<ul class="dropdown-menu">
-										<li><a href="reporte/fecha">Reporte por Fecha</a></li>
-										<li><a href="reporte/curso">Reporte por Ejercicios</a></li>
+										<li><a href="curso.html">Información</a></li>
+										<li><a href="week2week.html">Planificación</a></li>
+										<li><a href="#" id="sandbox">Sandbox</a></li>
+										<li><a href="Proyecto.html">Proyectos</a></li>
 									</ul>
+								</li>
+								<li> <a href="ayudantias.html">Ayudantias</a> </li>
+								<li> <a href="equipo.html">Equipo</a> </li>
+								<li id="perfil"></li>						
+								<li> 
+									<a href="#" class="login" data-toggle="modal" data-target="#myModal">
+								        <span id="icon" class="glyphicon glyphicon-user"></span>
+								        <span id="texto"></span>
+								    </a>
 								</li>
 							</ul>
 						</div>
@@ -49,33 +58,15 @@
 					<div class="col-sm-3 sidenav">
 						<h4>Sandbox</h4>
 							<ul class="nav nav-pills nav-stacked" id="lis">
-								<li class="active" id="prin"><a href="#P">Principiante</a></li>
-								<li id="med"><a href="#I">Intermedio</a></li>
-								<li id="avaz"><a href="#P">Avanzado</a></li>
+								<a href="#"><li class="active" id="prin">Principiante</a></li>
+								<a href="#"><li id="med">Intermedio</a></li>
+								<a href="#"><li id="avaz">Avanzado</a></li>
 							</ul><br>
 					</div>
 					<div class="col-sm-9" id="cuer">
-						  
+						  <h4 id="eti"><small>Principiante</small></h4>
+						  <hr id="linea">
 					 </div>
-					 
-					<!-- Modal -->
-					<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-					  <div class="modal-dialog" role="document">
-						<div class="modal-content">
-						  <div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-							<h4 class="modal-title" id="myModalLabel">Alerta</h4>
-						  </div>
-						  <div class="modal-body">
-							<p> Envio exitoso </p>
-						  </div>
-						  <div class="modal-footer">
-							<a href="sb_estd.html"><button type="button" class="btn btn-primary">Ok</button></a>
-						  </div>
-						</div>
-					  </div>
-					</div>
-					 
 				</div>
 			</div>
 			
@@ -96,7 +87,8 @@
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="/javaScript/sdEstudprincipal.js" type="text/javascript"></script>
+		<script src="/javaScript/sdEstudejercicio.js" type="text/javascript"></script>
+
 	</body>
 
 </html>
