--- a/sandbox/views/index.ejs
+++ b/sandbox/views/index.ejs
@@ -107,7 +107,7 @@
 				</div>
 			</section>	
 
-			<!-- Modal -->
+			<!-- Modal Nuevo-->
 			<div class="modal fade" id="usuarioMDL" role="dialog">
 				<div class="modal-dialog">
 					<div class="modal-content">
@@ -154,7 +154,7 @@
 								    <input id="pass" type="password" class="form-control input-sm" name="pass" placeholder="Contrasena">
 							    </div>
 							    <br>
-							    <p id="errorMsj"></p>
+							    <p id="saveMsj"></p>
 							    <div class="form-group">
 							    	<button type="btn" id="btnAdd" class="btn">Agregar</button>
 							    </div>
@@ -163,12 +163,65 @@
 					</div>
 				</div>		
 			</div>
-			<!-- Fin Modal -->
+			<!-- Fin Modal Nuevo-->
 
-			<!-- Modal -->
+			<!-- Modal Usr Editar-->
+			<div class="modal fade" id="usrEditMDL" role="dialog">
+				<div class="modal-dialog">
+					<div class="modal-content">
+					    <div class="modal-header">
+					        <button type="button" class="close" data-dismiss="modal">&times;</button>
+					        <h4><span class="glyphicon glyphicon-list-alt"></span> Actualizar Usuario </h4>
+					    </div>
+					    <div class="modal-body">
+					   		<!-- <form action="" onSubmit="enviarDatos(); return false"> -->
+						    	<div class="input-group">
+								    <span class="input-group-addon"><i class="glyphicon glyphicon-edit"></i></span>
+								    <input id="edit_ident" type="text" class="form-control input-sm" name="ident" placeholder=" Ingrese matrícula">
+							    </div>
+							    <br>
+						        <div class="input-group">
+								    <span class="input-group-addon"><i class="glyphicon glyphicon-edit"></i></span>
+								    <input id="edit_nomb" type="text" class="form-control input-sm" name="nombre" placeholder="Nombre">
+							    </div>
+							    <br>
+							    <div class="input-group">
+								    <span class="input-group-addon"><i class="glyphicon glyphicon-edit"></i></span>
+								    <input id="edit_apel" type="text" class="form-control input-sm" name="apellido" placeholder="Apellido">
+							    </div>
+							    <br>
+							    <div class="input-group">
+								    <span class="input-group-addon"><i class="glyphicon glyphicon-edit"></i></span>
+								    <input id="edit_carr" type="text" class="form-control input-sm" name="carrera" placeholder="Carrera">
+							    </div>
+							    <br>
+							    <div class="input-group">
+								    <span class="input-group-addon"><i class="glyphicon glyphicon-edit"></i></span>
+								    <input id="edit_correo" type="text" class="form-control input-sm" name="correo" placeholder="Email">
+							    </div>
+							    <br>
+							    <div class="input-group">
+								    <span class="input-group-addon"><i class="glyphicon glyphicon-edit"></i></span>
+								    <input id="edit_pass" type="password" class="form-control input-sm" name="pass" placeholder="Contrasena">
+							    </div>
+							    <br>
+							    <p id="edit_rol" visible="false"></p>
+							    <p id="edit_id" visible="false"></p>
+							    <p id="actMsj"></p>
+							    <div class="form-group">
+							    	<button type="btn" id="btnAct" class="btn" >Actualizar</button>
+							    </div>
+							<!-- </form> -->
+					    </div>
+					</div>
+				</div>		
+			</div>
+			<!-- Fin Modal Usr Editar-->
+
+			<!-- Modal Curso-->
 			<div class="modal fade" id="cursoMDL" role="dialog">    			
 			</div>
-			<!-- Fin Modal -->
+			<!-- Fin Modal Curso-->
 
 			<footer>
 				<div id="sub-footer">
