--- a/sandbox/views/sandbox_estd2.ejs
+++ b/sandbox/views/sandbox_estd2.ejs
@@ -8,8 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title><%= title %></title>
 		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/stylesheets/index_style00.css">
-		<link rel="stylesheet" href="/stylesheets/index_style
+		<link rel="stylesheet" href="/stylesheets/styleSB.css">
 	</head>
 
 	<body>
