--- a/sandbox/views/sandbox_est.ejs
+++ b/sandbox/views/sandbox_est.ejs
@@ -6,10 +6,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title><%= title %></title>
-		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-		<!--<link rel="stylesheet" href="css/style.css">-->
-		<link rel="stylesheet" href="/stylesheets/index_style00.css">
-		<link rel="stylesheet" href="/stylesheets/index_style01.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link rel="stylesheet" href="/stylesheets/styleSB.css">
+		
 	</head>
 
 	<body>
@@ -55,8 +54,9 @@
 							</ul><br>
 					</div>
 					<div class="col-sm-9" id="cuer">
-						  
-					 </div>
+					
+
+					</div>
 					 
 					<!-- Modal -->
 					<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -95,7 +95,7 @@
 			</footer>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		<script src="/javaScript/sdEstudprincipal.js" type="text/javascript"></script>
 	</body>
 
