--- a/sandbox/views/index.ejs
+++ b/sandbox/views/index.ejs
@@ -60,27 +60,14 @@
 					    
 					    <div id="seccion1" class="tab-pane fade in active">					    	
 							<!-- <div class="panel-group col-xs-7 col-md-8" id="panelColl"> -->
-						        <br>
-						        <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#usuarioMDL">
-						        	Nuevo
-						        </button>
-						        <br><br>
+					        <br>
+					        <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#usuarioMDL">
+					        	Nuevo
+					        </button>
+					        <br><br>
 
-						        <div id="usuariosTabla"></div>
-								<!-- <table class="table table-bordered" id="manageMemberTable"> -->
-								<!-- <table id="usuariosTabla" class="display" cellspacing="0" width="100%">
-									<thead>
-										<tr>
-											<th width="10%">Identificacion</th>
-											<th>Nombres</th>
-											<th>Apellidos</th>
-											<th>Carrera</th>
-											<th>Rol</th>
-											<th>Email</th>
-										</tr>
-									</thead>
-								</table>	 -->						    
-							<!-- </div> -->
+					        <div id="usuariosTabla"></div>
+								
 					    </div>
 
 					    <div id="seccion2" class="tab-pane fade">	
@@ -88,19 +75,10 @@
 					        <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#cursoMDL">
 					        	Nuevo
 					        </button>
-					        <br>
-							<table id="usuariosTabla" class="display" cellspacing="0" width="100%">
-								<thead>
-									<tr>
-										<th width="10%">Identificacion</th>
-										<th>Nombres</th>
-										<th>Apellidos</th>
-										<th>Carrera</th>
-										<th>Rol</th>
-										<th>Email</th>
-									</tr>
-								</thead>
-							</table>
+					        <br><br>
+
+					        <div id="cursosTabla"></div>
+
 					    </div>
 
 					</div>
@@ -242,9 +220,9 @@
 
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   		<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  		<!-- <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.2.4/js/buttons.bootstrap.js"></script> -->
   		<script type="text/javascript" src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
-  		<script type="text/javascript" src="javaScript/manageTable.js"></script>  		
+  		<script type="text/javascript" src="javaScript/index_Usuario.js"></script>  		
+  		<script type="text/javascript" src="javaScript/index_Curso.js"></script>  	
 
 	</body>
 
