curso, agregar profesor

--- a/sandbox/views/index.ejs
+++ b/sandbox/views/index.ejs
@@ -85,7 +85,7 @@
 				</div>
 			</section>	
 
-			<!-- Modal Nuevo-->
+			<!-- Modal Usr Nuevo-->
 			<div class="modal fade" id="usuarioMDL" role="dialog">
 				<div class="modal-dialog">
 					<div class="modal-content">
@@ -141,7 +141,7 @@
 					</div>
 				</div>		
 			</div>
-			<!-- Fin Modal Nuevo-->
+			<!-- Fin Modal Usr Nuevo-->
 
 			<!-- Modal Usr Editar-->
 			<div class="modal fade" id="usrEditMDL" role="dialog">
@@ -196,10 +196,29 @@
 			</div>
 			<!-- Fin Modal Usr Editar-->
 
-			<!-- Modal Curso-->
-			<div class="modal fade" id="cursoMDL" role="dialog">    			
+			<!-- Modal Usr Curso-->
+			<div class="modal fade" id="cursoMDL" role="dialog">
+				<div class="modal-dialog">
+					<div class="modal-content">
+					    <div class="modal-header">
+					        <button type="button" class="close" data-dismiss="modal">&times;</button>
+					        <h4><span class="glyphicon glyphicon-list-alt"></span> Nuevo Curso </h4>
+					    </div>
+					    <div class="modal-body">
+						    <div class="input-group">
+							    <span class="input-group-addon"><i class="glyphicon glyphicon-edit"></i></span>
+							    <input id="ident" type="text" class="form-control input-sm" name="ident" placeholder=" Ingrese paralelo">
+						    </div>						    						    
+						    <br>
+						    <p id="saveMsj"></p>
+						    <div class="form-group">
+						    	<button type="btn" id="btnAdd" class="btn">Agregar</button>
+						    </div>							
+					    </div>
+					</div>
+				</div>		
 			</div>
-			<!-- Fin Modal Curso-->
+			<!-- Fin Modal Usr Curso-->
 
 			<footer>
 				<div id="sub-footer">
