--- a/sandbox/views/index.ejs
+++ b/sandbox/views/index.ejs
@@ -196,6 +196,38 @@
 			</div>
 			<!-- Fin Modal Usr Editar-->
 
+
+			<!-- Modal Usr Eliminar-->
+			<div class="modal fade" id="usrElitMDL" role="dialog">
+				<div class="modal-dialog">
+					<div class="modal-content">
+					    <div class="modal-header">
+					        <button type="button" class="close" data-dismiss="modal">&times;</button>
+					        <h4><span class="glyphicon glyphicon-list-alt"></span> Eliminar Usuario </h4>
+					    </div>
+					    <div class="modal-body">
+
+					    	<p> Seguro desea eliminar el usuario...?</p>
+					    	
+					        <div class="input-group">
+					        	<span> Nombre: </span><p id="eli_nomb"></p>
+						    </div>
+						    <div class="input-group">
+						    	<span> Correo: </span><p id="eli_correo"></p>
+						    </div>
+						    <p id="eli_id" visible="false"></p>
+						    <br>						    
+						    <p id="eliMsj"></p>
+						    <div class="form-group">
+						    	<button type="btn" id="btnElim" class="button block-center" >Eliminar</button>
+						    </div>
+					    </div>
+					</div>
+				</div>		
+			</div>
+			<!-- Fin Modal Usr Eliminar-->
+
+
 			<!-- Modal Usr Curso-->
 			<div class="modal fade" id="cursoMDL" role="dialog">
 				<div class="modal-dialog">
