--- a/sandbox/views/index.ejs
+++ b/sandbox/views/index.ejs
@@ -239,9 +239,16 @@
 					    <div class="modal-body">
 						    <div class="input-group">
 							    <span class="input-group-addon"><i class="glyphicon glyphicon-edit"></i></span>
-							    <input id="ident" type="text" class="form-control input-sm" name="ident" placeholder=" Ingrese paralelo">
+							    <input id="paraleloCurso" type="text" class="form-control input-sm" name="paralelo" placeholder=" Ingrese paralelo ">
 						    </div>						    						    
 						    <br>
+						    <div class="input-group">
+							    <span class="input-group-addon"><i class="glyphicon glyphicon-edit"></i></span>
+							    <input id="profCurso" type="text" class="form-control input-sm" name="profesor" placeholder=" Profesor ">
+						    </div>
+						    <p id="profCurso_id" visible="false"></p>						    						    
+						    <br>
+						    <div id="profTabla"></div>
 						    <p id="saveMsj"></p>
 						    <div class="form-group">
 						    	<button type="btn" id="btnAdd" class="btn">Agregar</button>
